added the form elements

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,8 +8,41 @@
   <link rel="stylesheet" href="style.css">
   <title>Registration form</title>
 </head>
+
 <body>
-  
+  <div class="main-parent">
+    <div class="form-wrap">
+      <form action="" method="post">
+
+        <h1>Registartion Form</h1>
+        <div class="single-input">
+          <input type="text" name="" id="fname" placeholder="First Name">
+        </div>
+        <div class="single-input">
+          <input type="text" name="" id="sname" placeholder="Second Name">
+        </div>
+        <div class="single-input">
+          <input type="text" name="" id="lname" placeholder="Last Name">
+        </div>
+        <div class="singe-input">
+          <input type="text" name="" id="email" placeholder="Email">
+        </div>
+        <div class="singe-input">
+          <input type="password" name="" id="pass" placeholder="Password">
+        </div>
+        <div class="singe-input">
+          <input type="password" name="" id="cpass" placeholder="Confirm Password">
+        </div>
+        <div class="submit-btn">
+          <button class="button">Submit</button>
+        </div>
+
+      </form>
+    </div>
+  </div>
+
+
   <script src="script.js"></script>
 </body>
+
 </html>
