--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="form-wrap">
       <form action="" method="post">
 
-        <h1>Registartion Form</h1>
+        <h1>Registration Form</h1>
         <div class="single-input">
           <input type="text" name="" id="fname" placeholder="First Name">
         </div>
