set the border for the inputs and padding

--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
         <div class="single-input">
           <input type="text" name="" id="lname" placeholder="Last Name">
         </div>
-        <div class="singe-input">
+        <div class="single-input">
           <input type="text" name="" id="email" placeholder="Email">
         </div>
-        <div class="singe-input">
+        <div class="single-input">
           <input type="password" name="" id="pass" placeholder="Password">
         </div>
-        <div class="singe-input">
+        <div class="single-input">
           <input type="password" name="" id="cpass" placeholder="Confirm Password">
         </div>
         <div class="submit-btn">
