--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <div class="main-parent">
     <div class="form-wrap">
-      <form action="" method="post">
+      <form action="">
 
         <h1>Registration Form</h1>
         <div class="single-input">
