added  sweetalert cdn and error and success function to dispay modal based on condition of inputs

--- a/index.html
+++ b/index.html
@@ -16,22 +16,22 @@
 
         <h1>Registration Form</h1>
         <div class="single-input">
-          <input type="text" name="" id="fname" placeholder="First Name">
+          <input type="text" id="fname" placeholder="First Name" required>
         </div>
         <div class="single-input">
-          <input type="text" name="" id="sname" placeholder="Second Name">
+          <input type="text" id="sname" placeholder="Second Name" required>
         </div>
         <div class="single-input">
-          <input type="text" name="" id="lname" placeholder="Last Name">
+          <input type="text" id="lname" placeholder="Last Name" required>
         </div>
         <div class="single-input">
-          <input type="text" name="" id="email" placeholder="Email">
+          <input type="text" id="email" placeholder="Email" required>
         </div>
         <div class="single-input">
-          <input type="password" name="" id="pass" placeholder="Password">
+          <input type="password" id="pass" placeholder="Password" required>
         </div>
         <div class="single-input">
-          <input type="password" name="" id="cpass" placeholder="Confirm Password">
+          <input type="password" id="cpass" placeholder="Confirm Password" required>
         </div>
         <div class="submit-btn">
           <button class="button">Submit</button>
@@ -41,7 +41,7 @@
     </div>
   </div>
 
-
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="script.js"></script>
 </body>
 
