--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <link rel="stylesheet" href="style.css">
   <title>Registration form</title>
 </head>
 
 <body>
+  <div id="spinner"></div>
   <div class="main-parent">
     <div class="form-wrap">
       <form action="">
@@ -40,7 +42,7 @@
       </form>
     </div>
   </div>
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/spin.js/2.3.2/spin.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="script.js"></script>
 </body>
