updated background images

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="form-wrap">
       <form action="">
 
-        <h1>Registration Form</h1>
+        <h1>Register Here</h1>
         <div class="single-input">
           <input type="text" id="fname" placeholder="First Name" required>
         </div>
