--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
     <div class="form-wrap">
       <form action="">
 
-        <h1>Login Form</h1>
+        <h1>Login </h1>
 
 
         <div class="single-input">
